# timetable_cli

./: Cargo.toml  LICENSE  README.md  config.template.json
src/: main.rs  render.rs  utils.rs
