[package]
name = "timetable_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.12.12", features=["json"]}
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.27", features = ["derive"] }
serde_json = "1.0.138"
ratatui = "0.29.0"
crossterm = "0.28.1"
chrono = "0.4.39"
